--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,102 @@
 * {
     box-sizing: border-box;
-    display: none;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: seashell;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container{
+    background: lightgray;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 10px;
+    padding: 40px;
+    max-width: 1100px;
+    width: 100%;
+    margin: 10px;
+}
+
+#triangle-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+#fibonacci-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top:20px;
+}
+.row{
+    display: flex;
+    gap: 10px;
+}
+
+.number{
+    min-width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:white;
+    border-radius: 5px;
+    font-size: 0.9em;
+    box-shadow: 0 4px 4px darkgray;
+}
+
+.number.highlight{
+    background: darkcyan;
+    color: white;
+}
+
+.number.odd-highlight{
+    background: blue;
+    color: white;
+}
+.number.even-highlight{
+    background: white;
+}
+
+.sum-container{
+    text-align: center;
+    margin-top: 5px;
+    color:white;
+    font-weight: bold;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    max-width: 32%;
+    align-items: center;
+    background: white;
+    border-radius: 15px;
+    gap:15px;
+    padding: 5px;
+    text-align: center;
+}
+
+.mode-controls{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.active{
+    background-color: darkcyan;
+    color:white;
 }
